// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot when board is solved 1`] = `
<DocumentFragment>
  <div>
    <h1>
      Congrats! You won!
    </h1>
  </div>
</DocumentFragment>
`;

exports[`matches the initial snapshot 1`] = `
<DocumentFragment>
  <div>
    <table>
      <tbody>
        <tr>
          <td
            class="Cell Cell-lit"
            data-testid="0-0"
          />
          <td
            class="Cell Cell-lit"
            data-testid="0-1"
          />
          <td
            class="Cell Cell-lit"
            data-testid="0-2"
          />
          <td
            class="Cell Cell-lit"
            data-testid="0-3"
          />
          <td
            class="Cell Cell-lit"
            data-testid="0-4"
          />
        </tr>
        <tr>
          <td
            class="Cell Cell-lit"
            data-testid="1-0"
          />
          <td
            class="Cell Cell-lit"
            data-testid="1-1"
          />
          <td
            class="Cell Cell-lit"
            data-testid="1-2"
          />
          <td
            class="Cell Cell-lit"
            data-testid="1-3"
          />
          <td
            class="Cell Cell-lit"
            data-testid="1-4"
          />
        </tr>
        <tr>
          <td
            class="Cell Cell-lit"
            data-testid="2-0"
          />
          <td
            class="Cell Cell-lit"
            data-testid="2-1"
          />
          <td
            class="Cell Cell-lit"
            data-testid="2-2"
          />
          <td
            class="Cell Cell-lit"
            data-testid="2-3"
          />
          <td
            class="Cell Cell-lit"
            data-testid="2-4"
          />
        </tr>
        <tr>
          <td
            class="Cell Cell-lit"
            data-testid="3-0"
          />
          <td
            class="Cell Cell-lit"
            data-testid="3-1"
          />
          <td
            class="Cell Cell-lit"
            data-testid="3-2"
          />
          <td
            class="Cell Cell-lit"
            data-testid="3-3"
          />
          <td
            class="Cell Cell-lit"
            data-testid="3-4"
          />
        </tr>
        <tr>
          <td
            class="Cell Cell-lit"
            data-testid="4-0"
          />
          <td
            class="Cell Cell-lit"
            data-testid="4-1"
          />
          <td
            class="Cell Cell-lit"
            data-testid="4-2"
          />
          <td
            class="Cell Cell-lit"
            data-testid="4-3"
          />
          <td
            class="Cell Cell-lit"
            data-testid="4-4"
          />
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`matches the snapshot after a single click 1`] = `
<DocumentFragment>
  <div>
    <table>
      <tbody>
        <tr>
          <td
            class="Cell "
            data-testid="0-0"
          />
          <td
            class="Cell "
            data-testid="0-1"
          />
          <td
            class="Cell Cell-lit"
            data-testid="0-2"
          />
          <td
            class="Cell Cell-lit"
            data-testid="0-3"
          />
          <td
            class="Cell Cell-lit"
            data-testid="0-4"
          />
        </tr>
        <tr>
          <td
            class="Cell "
            data-testid="1-0"
          />
          <td
            class="Cell Cell-lit"
            data-testid="1-1"
          />
          <td
            class="Cell Cell-lit"
            data-testid="1-2"
          />
          <td
            class="Cell Cell-lit"
            data-testid="1-3"
          />
          <td
            class="Cell Cell-lit"
            data-testid="1-4"
          />
        </tr>
        <tr>
          <td
            class="Cell Cell-lit"
            data-testid="2-0"
          />
          <td
            class="Cell Cell-lit"
            data-testid="2-1"
          />
          <td
            class="Cell Cell-lit"
            data-testid="2-2"
          />
          <td
            class="Cell Cell-lit"
            data-testid="2-3"
          />
          <td
            class="Cell Cell-lit"
            data-testid="2-4"
          />
        </tr>
        <tr>
          <td
            class="Cell Cell-lit"
            data-testid="3-0"
          />
          <td
            class="Cell Cell-lit"
            data-testid="3-1"
          />
          <td
            class="Cell Cell-lit"
            data-testid="3-2"
          />
          <td
            class="Cell Cell-lit"
            data-testid="3-3"
          />
          <td
            class="Cell Cell-lit"
            data-testid="3-4"
          />
        </tr>
        <tr>
          <td
            class="Cell Cell-lit"
            data-testid="4-0"
          />
          <td
            class="Cell Cell-lit"
            data-testid="4-1"
          />
          <td
            class="Cell Cell-lit"
            data-testid="4-2"
          />
          <td
            class="Cell Cell-lit"
            data-testid="4-3"
          />
          <td
            class="Cell Cell-lit"
            data-testid="4-4"
          />
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
